deployments/templates/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gpfd-${ENV_NAME}-deployment
  labels:
    app: gpfd-${ENV_NAME}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gpfd-${ENV_NAME}
  template:
    metadata:
      labels:
        app: gpfd-${ENV_NAME}
    spec:
      serviceAccountName: laa-get-payments-finance-data-${ENV_NAME}-service
      volumes:
        - name: tmp
          emptyDir: { }
      containers:
        - name: gpfd-api-container-${ENV_NAME}
          image: ${REGISTRY}/${REPOSITORY}:${IMAGE_TAG}
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - name: tmp
              mountPath: /tmp
          securityContext:
            runAsUser: 1001
            runAsGroup: 1001
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
