deployments/templates/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: 'gpfd-at-tests'
spec:
  securityContext:
    runAsNonRoot: true
    runAsUser: 1000
    runAsGroup: 3000
    fsGroup: 2000
    seccompProfile:
      type: RuntimeDefault
  containers:
    - name: gpfd-tests
      image: ${TEST_IMAGE}
      imagePullPolicy: IfNotPresent
      securityContext:
        allowPrivilegeEscalation: false
        runAsNonRoot: true
        capabilities:
          drop: [ "ALL" ]
