deployments/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gpfd-${ENV_NAME}-ingress
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: gpfd-${ENV_NAME}-ingress-${NAMESPACE}-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
    nginx.ingress.kubernetes.io/backend-protocol: http
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/limit-rps: "10"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      limit_req_status 429;
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecRuleEngine On
    nginx.ingress.kubernetes.io/enable-owasp-core-rules: "true"
    nginx.ingress.kubernetes.io/whitelist-source-range: '${IP_LIST}'

spec:
  ingressClassName: '${INGRESS_CLASS_NAME}'
  tls:
    - hosts:
      - '${INGRESS_URL}'
  rules:
    - host: '${INGRESS_URL}'
      http:
        paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: gpfd-${ENV_NAME}-service
              port:
                number: 8080
